--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-html,
+/* html,
 body,
 #root
 {
@@ -8,4 +8,16 @@ body,
     width: 100%;
     height: 100%;
     overflow: hidden;
+} */
+
+html {
+    font-family: Arial;
+    /* font-size: 20px;
+    color: #FF7A59; */
+  }
+
+a {
+    /* display: inline-block; */
+    padding-right: 1rem;
+    color: #FF7A59;
 }
