set up styling and navbar

--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,8 @@ body,
 } */
 
 html {
-    font-family: Arial;
+    font-family: Candara;
+    color: #314970;
     /* font-size: 20px;
     color: #FF7A59; */
   }
@@ -19,5 +20,88 @@ html {
 a {
     /* display: inline-block; */
     padding-right: 1rem;
-    color: #FF7A59;
+    color: #314970;
+}
+
+/* h1 { font-family: Cambria; font-size: 23px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } h3 { font-family: Cambria; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } p { font-family: Cambria; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } blockquote { font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } pre { font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } */
+h1 { font-family: Candara, Optima, Arial; font-size: 2rem; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; padding-bottom: 1rem;} 
+h3 { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } 
+p { font-family: Candara, Optima, Arial; font-size: 1rem !important; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
+blockquote { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
+pre { font-family: Candara, Optima, Arial; font-size: 0.8rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+
+body {
+    background-color:#fafdfe;
+}
+
+.container {
+    max-width: 50%; /* Restricts the width to the middle two quarters (50%) */
+    margin: 0 auto; /* Centers the content horizontally */
+  }
+
+.navbar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+    flex-wrap: wrap; 
+    width: 100%; 
+    box-sizing: border-box; 
+    padding-bottom: 7rem;
+}
+
+.navbar li {
+    cursor: pointer; 
+  }
+
+.navbar-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap; 
+    width: 100%; 
+}
+
+.nav-links {
+    list-style-type: none;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+    flex-wrap: wrap; 
+    margin: 0;
+    padding: 0;
+    width: 100%; 
+}
+  
+.navbar-center .nav-links li {
+    margin-right: 15rem;
+    font-family: Candara; font-size: 1.5rem; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } p { font-family: Candara; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } blockquote { font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } pre { font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; 
+}
+
+.navbar-center .nav-links li:last-child {
+    margin-right: 0;
+}
+  
+.navbar-center .nav-links a {
+    text-decoration: none;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column; 
+    }
+
+    .nav-links {
+        flex-direction: column; 
+        align-items: right; 
+    }
+
+    .navbar-center .nav-links li {
+        margin-right: 0;
+        margin-bottom: 0.5rem; 
+    }
+
+    .navbar-center .nav-links li:last-child {
+        margin-bottom: 0;
+    }
 }
