--- a/src/style.css
+++ b/src/style.css
@@ -20,13 +20,15 @@ a {
     color: #314970;
 }
 
-/* h1 { font-family: Cambria; font-size: 23px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } h3 { font-family: Cambria; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } p { font-family: Cambria; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } blockquote { font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif; font-size: 17px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } pre { font-family: Candara, Calibri, Segoe, "Segoe UI", Optima, Arial, sans-serif; font-size: 11px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } */
 h1 { font-family: Candara, Optima, Arial; font-size: 2rem; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; padding-bottom: 1rem;} 
 h3 { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; } 
-p { font-family: Candara, Optima, Arial; font-size: 1rem !important; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
+p { font-family: Candara, Arial; font-size: 1rem !important; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
 blockquote { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
 pre { font-family: Candara, Optima, Arial; font-size: 0.8rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
-
+a {
+    margin: 0;
+    padding: 0;
+  }
 body {
     background-color:#fafdfe;
 }
@@ -38,7 +40,6 @@ body {
 
 .contact {
     padding-bottom: 0;
-    
     justify-content: center;
     align-items: center;
 }
@@ -90,33 +91,13 @@ body {
     text-decoration: none;
 }
 
-@media (max-width: 768px) {
-    .navbar {
-        flex-direction: column; 
-    }
-
-    .nav-links {
-        flex-direction: column; 
-        align-items: right; 
-    }
-
-    .navbar-center .nav-links li {
-        margin-right: 0;
-        margin-bottom: 0.5rem; 
-    }
-
-    .navbar-center .nav-links li:last-child {
-        margin-bottom: 0;
-    }
-
-    
-}
-
 #about {
     display: flex;
     flex-direction: column;
-    height: 85vh; 
-    margin-top: -2rem
+    justify-content: space-between;
+    height: calc(100vh - 9rem);
+    margin-top: -2rem;
+    overflow: hidden;
 }
 
 #about p {
@@ -125,7 +106,8 @@ body {
 }
 
 .contact {
-    margin-top: auto; 
+    margin-bottom: 0; 
+    padding-bottom: 0;
     text-align: center;
 }
 
@@ -147,4 +129,38 @@ canvas {
     margin-top: 2rem;
     z-index: -1;
     background-color: transparent;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column; 
+    }
+
+    .nav-links {
+        flex-direction: column; 
+        align-items: right; 
+    }
+
+    .navbar-center .nav-links li {
+        margin-right: 0;
+        margin-bottom: 0.5rem; 
+    }
+
+    .navbar-center .nav-links li:last-child {
+        margin-bottom: 0;
+    }
+
+    #about {
+        height: calc(100vh - 17rem);
+        gap: 18rem;
+    }
+
+    #about p {
+        margin-top: 11rem; 
+    }
+
+    .non-mobile-break {
+        display: none;
+    }
+    
 }
