--- a/src/style.css
+++ b/src/style.css
@@ -122,6 +122,7 @@ body {
 }
 
 
+
 canvas {
     position: fixed !important;
     width: 100% !important;
@@ -138,6 +139,11 @@ canvas {
 .project-link {
     margin-left: 10px; 
     margin-top: 1.4rem;
+    justify-content: center;
+}
+
+.project-images {
+    display: flex;
     justify-content: center;
 }
 
