--- a/src/style.css
+++ b/src/style.css
@@ -1,23 +1,26 @@
-/* html,
-body,
 #root
 {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-} */
+    --background-color: #fafdfe; 
+    --text-color: #314970;
+}
 
 html {
     font-family: Candara;
     color: #314970;
   }
 
+.dark-mode {
+    --background-color: #314970;
+    --text-color: #fafdfe;
+}
+
+body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+}
+
 a {
     padding-right: 1rem;
-    color: #314970;
 }
 
 h1 { font-family: Candara, Optima, Arial; font-size: 2rem; font-style: normal; font-variant: normal; font-weight: 700; line-height: 23px; padding-bottom: 1rem;} 
@@ -25,13 +28,11 @@ h3 { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal;
 p { font-family: Candara, Arial; font-size: 1rem !important; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
 blockquote { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
 pre { font-family: Candara, Optima, Arial; font-size: 0.8rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
+
 a {
     margin: 0;
     padding: 0;
   }
-body {
-    background-color:#fafdfe;
-}
 
 .container {
     max-width: 50%; 
