--- a/src/style.css
+++ b/src/style.css
@@ -30,7 +30,9 @@ h3 { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal;
 p { font-family: Candara, Arial; font-size: 1rem !important; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
 blockquote { font-family: Candara, Optima, Arial; font-size: 1.2rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; } 
 pre { font-family: Candara, Optima, Arial; font-size: 0.8rem; font-style: normal; font-variant: normal; font-weight: 400; line-height: 23px; }
-
+a {
+    padding-right: 0;
+}
 
 .container {
     max-width: 50%; 
