--- a/src/style.css
+++ b/src/style.css
@@ -90,11 +90,13 @@ a {
 }
 
 #about {
-    height: 100%
+    height: 100%;
 }
 .quote {
     margin-top: 5%;
     text-align: center;
+    
+    z-index: 9999;
 }
 
 .contact {
@@ -137,6 +139,23 @@ canvas {
     text-decoration: underline;
 }
 
+.loading {
+    display: flex; 
+    flex-direction: row; 
+    align-items: center; 
+    justify-content: center;
+    padding-top: 5rem;
+}
+
+.canvas-wrapper {
+    animation: fadeIn 5s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; }
+    100% { opacity: 1; }
+  }
+
 @media (max-width: 768px) {
     .navbar {
         flex-direction: column; 
@@ -164,3 +183,4 @@ canvas {
     }
     
 }
+
